<resources>

    <string name="app_name">CeliaPansard</string>
   <string name="menu_settings">Settings</string>
   
   
    <string name="title_activity_choose_first_action">Welcome</string>
	<string name="title_activity_list_of_views">Communities</string>
    <string name="title_activity_single_list_item">loading children</string>
    <string name="title_activity_download_file">Download File</string>
     
    
    <string name="Instruction1">Access to Midas Database</string>
	<string name="Instruction2">Enter URL</string>
	<string name="Instruction3">Save in SD Card or choose another folder</string>
    <string name="http">http://</string>
    <string name="OK">OK</string>
    <string name="Go">Go</string>
    <string name="Login">Login</string>
    
    <string name="desc">get access to Midas database</string>
    <string name="Search">Search for a file to open</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="buttonFolder">Folder</string>
    <string name="buttonSave">Save</string>
    <string name="buttonGo">Go</string>
     <string name="ReturnHomepage">Return Homepage</string>
     <string name="Instruction4">Open this file or search another file</string>
     <string name="buttonOpenCurrentFile">Open</string>
     <string name="buttonSearchFile">Search File</string>
     <string name="title_activity_file_explorer">FileExplorer</string>
     <string name="buttonChoose">Choose this directory</string>
     <string name="CommunityBundleKey">com.celiapansard.intent.action.COMMUNITY</string>
     
</resources>