<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- fill_parent" has been renamed "match_parent" to better reflect the behavior -->
    <!-- Add a text field -->
    <!-- android:id==unique identifier for the view -->
    <!-- (@) ==refer to a resource object from XML -->
    <!-- (edit_message)==resource name -->
    <!-- (+)==defining a resource ID for the first time -->
    <!-- android:layout_width and android:layout_height==the "wrap_content" view only as big as needed -->
    <!-- android:layout_weight="1"==fill the remaining space with the EditText element -->
    <!-- android:hint==default string to display when the text field is empty -->
    <!-- add a <Button> -->
    <!-- "wrap_content"==the button only as big as necessary -->
    <!-- sendMessage==name of method in activity to call when the user selects the button. -->

    <TextView
        android:id="@+id/instAccessMidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5sp"
        android:gravity="center_horizontal"
        android:text="@string/Instruction1"
        android:textSize="20sp" />

    <!-- android:onClick="accessMidas" -->

    <TextView
        android:id="@+id/urltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Instruction2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instAccessMidas"
        android:layout_marginTop="100dp"
        android:text="@string/Login"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/SearchFile"
        android:layout_below="@+id/LoginText"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="10sp" >

    </EditText>

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Email"
        android:layout_below="@+id/Email"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/SearchFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Password"
        android:layout_marginTop="33dp"
        android:text="@string/Search"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Email"
        android:layout_below="@+id/urltext"
        android:ems="10"
        android:hint="@string/http"
        android:inputType="text|textUri"
        android:textSize="10sp" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/SearchFile"
        android:onClick="ButtonOnClick"
        android:text="@string/buttonFolder" />

    <Button
        android:id="@+id/ButtonGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/URL"
        android:layout_toRightOf="@+id/Email"
        android:onClick="ButtonOnClick"
        android:text="@string/Go"
        android:textSize="10sp" />

</RelativeLayout>
