<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- fill_parent" has been renamed "match_parent" to better reflect the behavior -->
    <!-- Add a text field -->
    <!-- android:id==unique identifier for the view -->
    <!-- (@) ==refer to a resource object from XML -->
    <!-- (edit_message)==resource name -->
    <!-- (+)==defining a resource ID for the first time -->
    <!-- android:layout_width and android:layout_height==the "wrap_content" view only as big as needed -->
    <!-- android:layout_weight="1"==fill the remaining space with the EditText element -->
    <!-- android:hint==default string to display when the text field is empty -->
    <!-- add a <Button> -->
    <!-- "wrap_content"==the button only as big as necessary -->
    <!-- sendMessage==name of method in activity to call when the user selects the button. -->

    <TextView
        android:id="@+id/Inst3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/Instruction3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Inst3"
        android:layout_toLeftOf="@+id/Folder"
        android:onClick="ChooseSave"
        android:text="@string/buttonSave" />

    <Button
        android:id="@+id/ReturnHomepage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="ChooseSave"
        android:text="@string/ReturnHomepage" />

    <TextView
        android:id="@+id/instOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Save"
        android:layout_marginTop="52dp"
        android:text="@string/Instruction4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/OpenCurrentFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Save"
        android:layout_below="@+id/instOpen"
        android:onClick="ChooseSave"
        android:text="@string/buttonOpenCurrentFile" />

    <Button
        android:id="@+id/SearchFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/instOpen"
        android:layout_toRightOf="@+id/OpenCurrentFile"
        android:onClick="ChooseSave"
        android:text="@string/buttonSearchFile" />

    <Button
        android:id="@+id/Folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/instOpen"
        android:layout_alignLeft="@+id/ReturnHomepage"
        android:layout_alignParentRight="true"
        android:onClick="ChooseSave"
        android:text="@string/buttonFolder" />

</RelativeLayout>
